Fix: image overflow

--- a/website/public/css/base.scss
+++ b/website/public/css/base.scss
@@ -20,6 +20,10 @@ main {
     justify-content: center;
     align-items: center;
     padding: 16px 0;
+
+    img {
+      max-width: 100%;
+    }
   }
 
   p, ul {
